# SplitLab

./: .env.example  README.md  docker-compose.yml
Doc/: plan.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_gradual_rollout.py  003_user_targeting.py
backend/app/: main.py
backend/app/api/: __init__.py  experiments.py  layers.py  sdk.py  stats.py
backend/app/core/: config.py  redis.py
backend/app/models/: __init__.py  audit.py  event.py  experiment.py  layer.py  rollout.py  (+2 more)
backend/tests/: conftest.py  test_coordinator_repair.py  test_experiments.py  test_gradual_rollout.py  test_lifecycle.py  test_rollout_acceptance.py  test_rollout_config.py  test_rollout_guardrails.py  test_rollout_timer.py  test_sdk_api.py  test_stats.py  test_stratification.py  test_user_attributes.py
coordinator/: main.py  requirements.txt
docs/: experiment_scheduling_spec.md  gradual_rollout_spec.md  guardrail_auto_decision_spec.md  schema.md  sdk-protocol.md  sdk_auth_env_isolation_spec.md  stats-methodology.md  user_targeting_spec.md
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.tsx
sdk/: pyproject.toml
sdk/splitlab/: __init__.py  client.py  config_poller.py  event_buffer.py  models.py  splitter.py  targeting.py
sdk/splitlab_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/tests/: test_e2e.py  test_hot_reload.py  test_targeting.py  test_traffic_split.py  test_zero_loss.py
tests/: test_container_recovery.sh
(+26 files in other folders)
